Don't let videos overlap, fix single page header size

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -118,9 +118,12 @@
   background: #fff;
 }
 
-/* Responsive video embeds */
-article iframe {
+/* Responsive video embeds - make sure they don't overlap the border */
+.e-content iframe,
+.prose iframe,
+section iframe {
   max-width: 100% !important;
+  width: 100% !important;
 }
 
 /* Custom fonts */
@@ -179,6 +182,12 @@ header > div > a {
 .prose article.h-entry .e-content li {
   font-size: 1rem !important;
   line-height: 1.75 !important;
+}
+
+/* And for the header */
+.prose article.h-entry h1.p-name {
+  font-size: 1.5rem !important;
+  line-height: 1.3 !important;
 }
 
 /* Give some space between the recently read section and the next section */
